Add feature for new user

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,10 +1,10 @@
-@import "bootstrap-sprockets";
+// @import "bootstrap-sprockets";
 @import "bootstrap";
 
 /* universal */
 
 body {
-  padding-top: 60px;
+  padding-top: 100px;
 }
 
 #logo {
@@ -26,4 +26,31 @@ body {
 
 section {
   overflow: auto;
+}
+
+//input, textarea, select, .uneditable-input {
+input { 
+  border: 1px solid #bbb;
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+// For top page background image
+.jumbotron { 
+  background:url(topimage.jpg) center no-repeat ; 
+  background-size: cover;
+  opacity: 0.8;
+  color: #FFF
+}
+
+.bkRGBA {
+  background: rgba(0,0,0,0.5);
+  padding: 100px 35px;
+  }
+.btn {
+  opacity: 0.9;
+}
+
+.btn:hover {
+  opacity: 1;
 }
