--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,9 @@
 <% provide :title, 'Home' %>
 <div class="center jumbotron">
-  <h1>Welcome to Macro Share</h1>
-  <p>Macro Share はあなたに最適なカロリーとマクロ栄養素のバランスをお伝えします。</p>
-  <%= link_to "まずはユーザ登録!", signup_url, class: "btn btn-lg btn-primary"%>
+  <div class="bkRGBA">
+    <h1>Welcome to Macro Share</h1>
+    <p>Macro Share はあなたに最適なカロリーとマクロ栄養素のバランスをお伝えします。</p>
+    <%= link_to "まずはユーザ登録!", signup_url, class: "btn btn-lg btn-primary"%>
+  </div>
 </div>
 
