--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,17 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<% provide(:title, 'Signup')%>
+<h1>ユーザ登録</h1>
+<%= form_for(@user, url: signup_path) do |f| %>
+  <%= f.label :name %>
+  <%= f.text_field :name %>
+
+  <%= f.label :email %>
+  <%= f.email_field :email %>
+
+  <%= f.label :password %>
+  <%= f.password_field :password %>
+  
+  <%= f.label :password_confirmation, "Confirmation" %>    
+  <%= f.password_field :password_confirmation %>
+  
+  <%= f.submit "ユーザ登録", class: "btn btn-primary" %>
+<% end %>
