register standard info (without view)

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,10 +9,8 @@
           </h1> 
         </div>
         <div class="col-md-8">
-          <div class="col-md-12">
-            <h1>まずはあなたに最適なカロリーと<br>マクロ栄養素のバランスを求めましょう！</h1>
-            <p>身長・体重・年齢・活動量などの基本情報から、<br>その人にあったカロリーとマクロバランスを算出することが出来ます。</p>
-          </div><a class="btn btn-primary btn-lg" href="#" >基本情報を登録！</a>
+          <%= render 'users/before_reg'%>
+          <%= render 'users/after_reg'%>
         </div>
       </div>
     </div>
