register standard info finish

--- a/app/views/users/_after_reg.html.erb
+++ b/app/views/users/_after_reg.html.erb
@@ -1,2 +1,15 @@
 <div class="col-md-12">
+  <p>
+    あなたに最適なカロリー摂取量:<br>
+    <ul><li><%= @user.userfeature.total_calorie %> Kcal </ul></li>
+  </p>
+  <p>
+    あなたに最適なマクロ栄養素バランス:
+    <ul>
+      <li> タンパク質：<%= @user.userfeature.protein %> g </p> 
+      <li> 脂質      ：<%= @user.userfeature.fat %> g </p> 
+      <li> 炭水化物  ：<%= @user.userfeature.carbo %> g </p> 
+    </ul>
+ </p>
+ <%= link_to "基本情報を更新!", edit_userfeature_url, class: "btn btn-lg btn-primary"%>
 </div>
