--- a/app/views/userfeatures/_form.html.erb
+++ b/app/views/userfeatures/_form.html.erb
@@ -1,23 +1,24 @@
 <%= form_for(@userfeature, url: yield(:post_url)) do |f| %>
+  <%= render 'shared/error_messages', object: f.object %>
   <%= f.hidden_field :user_id, value: current_user.id %>
   
   <%= f.label :gender %><br>
-  <%= f.select :gender, [['男性','male'], ['女性','female'], ['その他','not_applicable'], ['無回答','not_known']] %><br> 
+  <%= f.select :gender, [['男性','male'], ['女性','female'], ['その他','not_applicable'], ['無回答','not_known']], class: 'form-control' %><br> 
   
   <%= f.label :height%>
-  <%= f.number_field :height %>
+  <%= f.number_field :height, class: 'form-control' %>
   
   <%= f.label :weight%>
-  <%= f.number_field :weight%>
+  <%= f.number_field :weight, class: 'form-control' %>
   
   <%= f.label :age%>
-  <%= f.number_field :age%>
+  <%= f.number_field :age, class: 'form-control' %>
   
   <%= f.label :activity%><br>
-  <%= f.select :activity, [['高い','high'], ['普通','middle'], ['低い','low']] %><br> 
+  <%= f.select :activity, [['高い','high'], ['普通','middle'], ['低い','low']], class: 'form-control' %><br> 
   
   <%= f.label :purpose%><br>
-  <%= f.select :purpose, [['増量','increase'], ['維持','maintain'], ['減量','loss']] %><br> 
+  <%= f.select :purpose, [['増量','increase'], ['維持','maintain'], ['減量','loss']], class: 'form-control' %><br> 
   
   <%= f.submit "基本情報登録", class: "btn btn-primary" %>
 <% end %>
