#7 finish modify title output

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= yield(:title) %> | Macro Share </title>
+    <title><%= title(yield(:title)) %></title>
     <%= render 'layouts/def_head'%>
   </head>
 
