--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,19 +1,5 @@
 <% provide(:title, 'Signup')%>
+<% provide(:post_url, users_path)%>
+<% provide(:button, 'ユーザ登録')%>
 <h1>ユーザ登録</h1>
-<%= form_for(@user, url: signup_path) do |f| %>
-  <%= render 'shared/error_messages', object: f.object %>
-
-  <%= f.label :name %>
-  <%= f.text_field :name, class: 'form-control' %>
-
-  <%= f.label :email %>
-  <%= f.email_field :email, class: 'form-control'%>
-
-  <%= f.label :password %>
-  <%= f.password_field :password, class: 'form-control' %>
-  
-  <%= f.label :password_confirmation, "Confirmation" %>    
-  <%= f.password_field :password_confirmation, class: 'form-control' %>
-  
-  <%= f.submit "ユーザ登録", class: "btn btn-primary" %>
-<% end %>
+<%= render 'users/form' %>
