--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@user, url: yield(:post_url)) do |f| %>
+<%= form_for(@user, url: yield(:post_url), html: { multipart: true }) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
 
   <%= f.label :name %>
@@ -12,7 +12,12 @@
   
   <%= f.label :password_confirmation, "Confirmation" %>    
   <%= f.password_field :password_confirmation, class: 'form-control' %>
-  
+
+  <% if logged_in? %>
+    <%= f.label :image_name, 'ユーザ画像' %>
+    <%= f.file_field :image_name %>
+  <% end %>
+
   <!--  <%= f.submit "ユーザ登録", class: "btn btn-primary" %> -->
   <%= f.submit yield(:button), class: "btn btn-primary" %>
 <% end %>
