--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -54,3 +54,14 @@ input {
 .btn:hover {
     opacity: 1;
 }
+
+// For form
+select {
+    -webkit-appearance:none;
+    height: 100%;
+    width: 100%;
+}
+
+input {
+    margin-top: 10px;
+}
