--- a/app/views/users/_after_reg.html.erb
+++ b/app/views/users/_after_reg.html.erb
@@ -11,6 +11,6 @@
       <li> 炭水化物  ：<%= @user.userfeature.carbo %> g </p> 
     </ul>
  </p>
- <%= link_to "アカウント情報を更新!", edit_user_url, class: "btn btn-lg btn-primary"%>
- <%= link_to "基本情報を更新!", edit_userfeature_url, class: "btn btn-lg btn-primary"%>
+ <%= link_to "アカウント情報を更新!", edit_user_url(current_user), class: "btn btn-lg btn-primary"%>
+ <%= link_to "基本情報を更新!", edit_userfeature_url(current_user.userfeature), class: "btn btn-lg btn-primary"%>
 </div>
